Header & front sections

--- a/index.html
+++ b/index.html
@@ -13,14 +13,56 @@
     <link rel="stylesheet" href="./css/site.css" />
   </head>
   <body>
-    <p>Hello world</p>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+    <header class="page-header">
+      <h1 class="header-title">
+        <a href="./" class="no-style-link">J.<span class="t--green-dark">Vilaplana</span></a>
+      </h1>
+      <nav class="main-nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Education</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Lifestyle</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="section-front">
+        <div class="container grid g--2-cols">
+          <div class="front-presentation">
+            <p class="front-title">
+              <span class="f-title-block t--green-dark">Jordi</span>
+              <br />
+              <span class="f-title-block t--white b--green-dark">Vilaplana Mart&iacute;</span>
+              <br />
+              <span class="f-title-block t--purple-dark">.Net</span>
+              <br />
+              <span class="f-title-block t--white b--purple-dark">Developer&block;</span>
+            </p>
+            <blockquote class="motivational">
+              &OpenCurlyDoubleQuote;Simplify, then add lightness&CloseCurlyDoubleQuote; &mdash; Colin Chapman
+            </blockquote>
+          </div>
+          <div class="front-img-box"></div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-footer"></footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
