Values section & general styling

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header class="page-header">
-      <h1 class="header-title">
+      <span class="header-title">
         <a href="./" class="no-style-link">J.<span class="t--green-dark">Vilaplana</span></a>
-      </h1>
+      </span>
       <nav class="main-nav">
         <ul class="nav-list">
           <li class="nav-item">
@@ -39,28 +39,72 @@
     </header>
 
     <main>
-      <section class="section-front">
-        <div class="container grid g--2-cols">
+      <section class="section section-front">
+        <div class="container grid g--3-cols">
           <div class="front-presentation">
-            <p class="front-title">
+            <h1 class="front-title">
               <span class="f-title-block t--green-dark">Jordi</span>
               <br />
               <span class="f-title-block t--white b--green-dark">Vilaplana Mart&iacute;</span>
               <br />
               <span class="f-title-block t--purple-dark">.Net</span>
               <br />
-              <span class="f-title-block t--white b--purple-dark">Developer&block;</span>
-            </p>
-            <blockquote class="motivational">
-              &OpenCurlyDoubleQuote;Simplify, then add lightness&CloseCurlyDoubleQuote; &mdash; Colin Chapman
-            </blockquote>
+              <span class="f-title-block t--white b--purple-dark t--block-end">Developer</span>
+            </h1>
+            <blockquote class="motivational">&OpenCurlyDoubleQuote;Simplify, then add lightness&CloseCurlyDoubleQuote; &mdash; Colin Chapman</blockquote>
           </div>
+
           <div class="front-img-box"></div>
+        </div>
+      </section>
+
+      <!-- <section class="section section-featured">
+        <h2 class="featured-title">Featured in</h2>
+        <ul class="featured-list"></ul>
+      </section> -->
+
+      <section class="section section-values">
+        <div class="container">
+          <h2>Skillset for your team</h2>
+          <div class="values-container grid g--3-cols">
+            <figure class="value-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="bulb-outline"></ion-icon>
+              </span>
+              <h3>Problem solver</h3>
+              <p class="value-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis veniam repellat laborum esse ex iure ab quos nemo quis praesentium optio
+                numquam, asperiores eveniet! Facilis a asperiores nostrum provident aperiam?
+              </p>
+            </figure>
+            <figure class="value-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="code-slash-outline"></ion-icon>
+              </span>
+              <h3>Solutions developer</h3>
+              <p class="value-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quasi perferendis quaerat quidem velit, enim ipsum accusamus ipsa excepturi
+                quia doloribus deleniti eveniet animi facilis possimus nemo unde quam officia.
+              </p>
+            </figure>
+            <figure class="value-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="people-outline"></ion-icon>
+              </span>
+              <h3>Team builder</h3>
+              <p class="value-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
+                temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
+              </p>
+            </figure>
+          </div>
         </div>
       </section>
     </main>
 
-    <footer class="page-footer"></footer>
+    <footer class="section page-footer">
+      <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;<br />All rights reserved.</p>
+    </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
