--- a/index.html
+++ b/index.html
@@ -65,34 +65,82 @@
 
       <section class="section section-values">
         <div class="container">
-          <h2>Skillset for your team</h2>
-          <div class="values-container grid g--3-cols">
-            <figure class="value-item">
+          <h2>High value for your team</h2>
+          <div class="grid g--3-cols">
+            <figure class="figure-item">
               <span class="figure-icon-container">
                 <ion-icon class="figure-icon" name="bulb-outline"></ion-icon>
               </span>
               <h3>Problem solver</h3>
-              <p class="value-text">
+              <p class="figure-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis veniam repellat laborum esse ex iure ab quos nemo quis praesentium optio
                 numquam, asperiores eveniet! Facilis a asperiores nostrum provident aperiam?
               </p>
             </figure>
-            <figure class="value-item">
+            <figure class="figure-item">
               <span class="figure-icon-container">
                 <ion-icon class="figure-icon" name="code-slash-outline"></ion-icon>
               </span>
               <h3>Solutions developer</h3>
-              <p class="value-text">
+              <p class="figure-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quasi perferendis quaerat quidem velit, enim ipsum accusamus ipsa excepturi
                 quia doloribus deleniti eveniet animi facilis possimus nemo unde quam officia.
               </p>
             </figure>
-            <figure class="value-item">
+            <figure class="figure-item">
               <span class="figure-icon-container">
                 <ion-icon class="figure-icon" name="people-outline"></ion-icon>
               </span>
               <h3>Team builder</h3>
-              <p class="value-text">
+              <p class="figure-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
+                temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
+              </p>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="section section-quality">
+        <div class="container">
+          <h2>Solutions quality from the get-go</h2>
+          <div class="grid g--4-cols">
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="speedometer-outline"></ion-icon>
+              </span>
+              <h3>Performance</h3>
+              <p class="figure-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis veniam repellat laborum esse ex iure ab quos nemo quis praesentium optio
+                numquam, asperiores eveniet! Facilis a asperiores nostrum provident aperiam?
+              </p>
+            </figure>
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="pulse-outline"></ion-icon>
+              </span>
+              <h3>Reliability</h3>
+              <p class="figure-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quasi perferendis quaerat quidem velit, enim ipsum accusamus ipsa excepturi
+                quia doloribus deleniti eveniet animi facilis possimus nemo unde quam officia.
+              </p>
+            </figure>
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="cog-outline"></ion-icon>
+              </span>
+              <h3>Maintenability</h3>
+              <p class="figure-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
+                temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
+              </p>
+            </figure>
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="cube-outline"></ion-icon>
+              </span>
+              <h3>Reusability</h3>
+              <p class="figure-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
                 temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
               </p>
