--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
         </div>
       </section>
 
-      <!-- <section class="section section-featured">
-        <h2 class="featured-title">Featured in</h2>
-        <ul class="featured-list"></ul>
-      </section> -->
+      <section class="section section-experience">
+        <div class="container big-card card-green">
+          <h2 class="h-white">Experience across the field</h2>
+          <div class="grid g--3-cols"></div>
+        </div>
+      </section>
 
       <section class="section section-values">
         <div class="container">
@@ -98,6 +100,13 @@
               </p>
             </figure>
           </div>
+        </div>
+      </section>
+
+      <section class="section section-education">
+        <div class="container big-card card-green">
+          <h2 class="h-white">Future proof, every day</h2>
+          <div class="grid g--3-cols"></div>
         </div>
       </section>
 
@@ -146,6 +155,13 @@
               </p>
             </figure>
           </div>
+        </div>
+      </section>
+
+      <section class="section section-education">
+        <div class="container big-card card-green">
+          <h2 class="h-white">Follow me on my socials</h2>
+          <div class="grid g--3-cols"></div>
         </div>
       </section>
     </main>
