--- a/index.html
+++ b/index.html
@@ -158,10 +158,25 @@
         </div>
       </section>
 
-      <section class="section section-education">
+      <section class="section section-contact">
         <div class="container big-card card-green">
           <h2 class="h-white">Follow me on my socials</h2>
-          <div class="grid g--3-cols"></div>
+          <nav class="socials">
+            <ul class="socials-list">
+              <li class="social-item">
+                <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-linkedin"></ion-icon></a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-twitter"></ion-icon></a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-github"></ion-icon></a>
+              </li>
+              <li class="social-item">
+                Or <a href="#" class="cta-link">contact me <ion-icon class="social-logo" name="chevron-forward-outline"></ion-icon></a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </section>
     </main>
