Big card sections & CTA styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
       <section class="section section-experience">
         <div class="container big-card card-green">
           <h2 class="h-white">Experience across the field</h2>
-          <div class="grid g--3-cols"></div>
+          <div class="grid g--3-cols">
+            <div class="big-card-img"></div>
+            <div class="g--span-2-wide">
+              <p class="big-card-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aperiam, sequi perferendis aut distinctio facere architecto earum nihil
+                doloribus nostrum omnis harum nulla laborum iste! Optio fuga distinctio perferendis explicabo?
+              </p>
+              <span class="cta-container">
+                <a href="#" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+              </span>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -106,7 +117,18 @@
       <section class="section section-education">
         <div class="container big-card card-green">
           <h2 class="h-white">Future proof, every day</h2>
-          <div class="grid g--3-cols"></div>
+          <div class="grid g--3-cols">
+            <div class="g--span-2-wide">
+              <p class="big-card-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aperiam, sequi perferendis aut distinctio facere architecto earum nihil
+                doloribus nostrum omnis harum nulla laborum iste! Optio fuga distinctio perferendis explicabo?
+              </p>
+              <span class="cta-container">
+                <a href="#" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+              </span>
+            </div>
+            <div class="big-card-img"></div>
+          </div>
         </div>
       </section>
 
@@ -138,7 +160,7 @@
               <span class="figure-icon-container">
                 <ion-icon class="figure-icon" name="cog-outline"></ion-icon>
               </span>
-              <h3>Maintenability</h3>
+              <h3>Maintainability</h3>
               <p class="figure-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
                 temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
@@ -173,7 +195,7 @@
                 <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-github"></ion-icon></a>
               </li>
               <li class="social-item">
-                Or <a href="#" class="cta-link">contact me <ion-icon class="social-logo" name="chevron-forward-outline"></ion-icon></a>
+                Or&nbsp;<a href="#" class="cta-link cta--big">contact me&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
               </li>
             </ul>
           </nav>
