Experience & education texts

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
             <div class="big-card-img"></div>
             <div class="g--span-2-wide">
               <p class="big-card-txt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aperiam, sequi perferendis aut distinctio facere architecto earum nihil
-                doloribus nostrum omnis harum nulla laborum iste! Optio fuga distinctio perferendis explicabo?
+                I'm a versatile .NET software developer with experience in start-ups, top consultancy firms, and established industrial leaders. I've built
+                innovative solutions in retail, agro-tech, banking, airlines, healthcare, and payment systems. My work spans invoicing management platforms,
+                crop field management tools, secure banking applications, and healthcare systems. With a passion for quality and efficiency, I deliver
+                impactful, industry-leading solutions.
               </p>
               <span class="cta-container">
                 <a href="#" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
@@ -120,8 +122,10 @@
           <div class="grid g--3-cols">
             <div class="g--span-2-wide">
               <p class="big-card-txt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aperiam, sequi perferendis aut distinctio facere architecto earum nihil
-                doloribus nostrum omnis harum nulla laborum iste! Optio fuga distinctio perferendis explicabo?
+                Staying ahead in the ever-evolving tech landscape is my passion. I constantly update my skills through continuous study, earning certifications
+                in the latest .NET frameworks and related technologies. I actively engage with industry news, participate in webinars, and attend tech
+                conferences to stay informed about emerging trends. My dedication to learning ensures I bring cutting-edge solutions to every project,
+                leveraging the newest innovations to drive success.
               </p>
               <span class="cta-container">
                 <a href="#" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
