Values & quality texts

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
               </span>
               <h3>Problem solver</h3>
               <p class="figure-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis veniam repellat laborum esse ex iure ab quos nemo quis praesentium optio
-                numquam, asperiores eveniet! Facilis a asperiores nostrum provident aperiam?
+                I excel at dissecting complex issues to uncover effective solutions, transforming challenges into opportunities for innovation. My analytical
+                mindset and attention to detail ensure that I tackle problems with precision and creativity.
               </p>
             </figure>
             <figure class="figure-item">
@@ -98,8 +98,8 @@
               </span>
               <h3>Solutions developer</h3>
               <p class="figure-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quasi perferendis quaerat quidem velit, enim ipsum accusamus ipsa excepturi
-                quia doloribus deleniti eveniet animi facilis possimus nemo unde quam officia.
+                I specialize in crafting tailored solutions that meet specific client needs, from conceptualization to deployment. My focus is on delivering
+                robust, scalable, and efficient applications that drive tangible results and enhance user experiences.
               </p>
             </figure>
             <figure class="figure-item">
@@ -108,8 +108,8 @@
               </span>
               <h3>Team builder</h3>
               <p class="figure-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
-                temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
+                I thrive in collaborative environments, fostering a culture of trust and open communication. By mentoring peers and encouraging knowledge
+                sharing, I help build cohesive, high-performing teams that achieve remarkable outcomes together.
               </p>
             </figure>
           </div>
@@ -146,8 +146,8 @@
               </span>
               <h3>Performance</h3>
               <p class="figure-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis veniam repellat laborum esse ex iure ab quos nemo quis praesentium optio
-                numquam, asperiores eveniet! Facilis a asperiores nostrum provident aperiam?
+                I prioritize high-performance code, ensuring applications run efficiently and handle peak loads seamlessly. My optimization techniques enhance
+                speed and responsiveness, delivering a superior user experience.
               </p>
             </figure>
             <figure class="figure-item">
@@ -156,8 +156,8 @@
               </span>
               <h3>Reliability</h3>
               <p class="figure-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quasi perferendis quaerat quidem velit, enim ipsum accusamus ipsa excepturi
-                quia doloribus deleniti eveniet animi facilis possimus nemo unde quam officia.
+                I write reliable code that stands up to rigorous testing and real-world use. My commitment to robust development practices ensures that my
+                applications are dependable and resilient under any conditions.
               </p>
             </figure>
             <figure class="figure-item">
@@ -166,8 +166,8 @@
               </span>
               <h3>Maintainability</h3>
               <p class="figure-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
-                temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
+                I focus on maintainable code by following best practices, clear documentation, and modular design. This approach makes it easier for teams to
+                update and extend applications, reducing future development effort.
               </p>
             </figure>
             <figure class="figure-item">
@@ -176,8 +176,8 @@
               </span>
               <h3>Reusability</h3>
               <p class="figure-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi alias voluptate eligendi! Voluptate vero assumenda at veniam
-                temporibus sed! Laudantium doloribus aliquid et est mollitia blanditiis cum incidunt ducimus.
+                I design reusable code components to streamline development and foster consistency across projects. By creating flexible, adaptable modules, I
+                enable efficient reuse and quicker project turnaround times.
               </p>
             </figure>
           </div>
