--- a/index.html
+++ b/index.html
@@ -190,13 +190,19 @@
           <nav class="socials">
             <ul class="socials-list">
               <li class="social-item">
-                <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/jordivilaplanamarti" target="_blank" class="social-link">
+                  <ion-icon class="social-logo" name="logo-linkedin"></ion-icon>
+                </a>
               </li>
               <li class="social-item">
-                <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-twitter"></ion-icon></a>
+                <a href="https://x.com/JVilaplanaDev" target="_blank" class="social-link">
+                  <ion-icon class="social-logo" name="logo-twitter"></ion-icon>
+                </a>
               </li>
               <li class="social-item">
-                <a href="#" class="social-link"><ion-icon class="social-logo" name="logo-github"></ion-icon></a>
+                <a href="https://github.com/JordiVilaplana" target="_blank" class="social-link">
+                  <ion-icon class="social-logo" name="logo-github"></ion-icon>
+                </a>
               </li>
               <li class="social-item">
                 Or&nbsp;<a href="#" class="cta-link cta--big">contact me&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
@@ -208,7 +214,8 @@
     </main>
 
     <footer class="section page-footer">
-      <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;<br />All rights reserved.</p>
+      <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;.<br />All rights reserved.</p>
+      <p class="copyright">Icons by <a href="https://ionic.io/ionicons" target="_blank">Ionicons</a>.</p>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
