Added pages: experience, education, contact

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <nav class="main-nav">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="#">Experience</a>
+            <a href="./experience.html">Experience</a>
           </li>
           <li class="nav-item">
-            <a href="#">Education</a>
+            <a href="./education.html">Education</a>
           </li>
           <li class="nav-item">
             <a href="#">Projects</a>
@@ -32,7 +32,7 @@
             <a href="#">Lifestyle</a>
           </li>
           <li class="nav-item">
-            <a href="#">Contact</a>
+            <a href="./contact.html">Contact</a>
           </li>
         </ul>
       </nav>
@@ -71,7 +71,7 @@
                 impactful, industry-leading solutions.
               </p>
               <span class="cta-container">
-                <a href="#" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+                <a href="./experience.html" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
               </span>
             </div>
           </div>
@@ -128,7 +128,7 @@
                 leveraging the newest innovations to drive success.
               </p>
               <span class="cta-container">
-                <a href="#" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+                <a href="./education.html" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
               </span>
             </div>
             <div class="big-card-img"></div>
@@ -190,22 +190,24 @@
           <nav class="socials">
             <ul class="socials-list">
               <li class="social-item">
-                <a href="https://www.linkedin.com/in/jordivilaplanamarti" target="_blank" class="social-link">
+                <a href="https://www.linkedin.com/in/jordivilaplanamarti" target="_blank" title="LinkedIn" class="social-link">
                   <ion-icon class="social-logo" name="logo-linkedin"></ion-icon>
                 </a>
               </li>
               <li class="social-item">
-                <a href="https://x.com/JVilaplanaDev" target="_blank" class="social-link">
+                <a href="https://x.com/JVilaplanaDev" target="_blank" title="Twitter/X" class="social-link">
                   <ion-icon class="social-logo" name="logo-twitter"></ion-icon>
                 </a>
               </li>
               <li class="social-item">
-                <a href="https://github.com/JordiVilaplana" target="_blank" class="social-link">
+                <a href="https://github.com/JordiVilaplana" target="_blank" title="GitHub" class="social-link">
                   <ion-icon class="social-logo" name="logo-github"></ion-icon>
                 </a>
               </li>
               <li class="social-item">
-                Or&nbsp;<a href="#" class="cta-link cta--big">contact me&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+                Or&nbsp;<a href="./contact.html" class="cta-link cta--big"
+                  >contact me&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon
+                ></a>
               </li>
             </ul>
           </nav>
