--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jordi Vilaplana &ndash; .Net Developer</title>
+    <title>Jordi Vilaplana &ndash; Contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     />
     <link rel="stylesheet" href="./css/site.css" />
+    <link rel="stylesheet" href="./css/contact.css" />
   </head>
   <body>
     <header class="page-header">
@@ -38,7 +39,70 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="section section-front">
+        <div class="container grid g--3-cols">
+          <div class="front-presentation">
+            <h1 class="front-title">
+              <span class="f-title-block t--green-dark">Jordi</span>
+              <br />
+              <span class="f-title-block t--white b--green-dark">Vilaplana Mart&iacute;</span>
+              <br /><br />
+              <span class="f-title-block t--white b--purple-dark t--block-end">Contact</span>
+            </h1>
+          </div>
+
+          <div class="front-img-box"></div>
+        </div>
+      </section>
+
+      <section class="section section-contact">
+        <div class="container big-card card-green">
+          <h2 class="h-white">Contact me using one of the following</h2>
+          <nav class="contact-nav">
+            <ul class="contact-list">
+              <li class="contact-item">
+                <a href="mailto:jordivilaplana@outlook.es" target="_blank" title="LinkedIn" class="contact-link">
+                  <ion-icon class="contact-icon" name="mail-outline"></ion-icon>
+                  <span class="contact-text">jordivilaplana@outlook.es</span>
+                </a>
+              </li>
+              <li class="contact-item">
+                <a href="tel:(+34)660821516" target="_blank" title="Twitter/X" class="contact-link">
+                  <ion-icon class="contact-icon" name="call-outline"></ion-icon>
+                  <span class="contact-text">(+34) 660 82 15 16</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="contact-availability">Available 9 AM/6 PM. Europe/Madrid timezone.</div>
+
+          <h2 class="h-white">Or follow me on my socials</h2>
+          <nav class="contact-nav">
+            <ul class="contact-list">
+              <li class="contact-item">
+                <a href="https://www.linkedin.com/in/jordivilaplanamarti" target="_blank" title="LinkedIn" class="contact-link">
+                  <ion-icon class="contact-icon" name="logo-linkedin"></ion-icon>
+                  <span class="contact-text">LinkedIn</span>
+                </a>
+              </li>
+              <li class="contact-item">
+                <a href="https://x.com/JVilaplanaDev" target="_blank" title="Twitter/X" class="contact-link">
+                  <ion-icon class="contact-icon" name="logo-twitter"></ion-icon>
+                  <span class="contact-text">Twitter/X</span>
+                </a>
+              </li>
+              <li class="contact-item">
+                <a href="https://github.com/JordiVilaplana" target="_blank" title="GitHub" class="contact-link">
+                  <ion-icon class="contact-icon" name="logo-github"></ion-icon>
+                  <span class="contact-text">GitHub</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+    </main>
 
     <footer class="section page-footer">
       <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;.<br />All rights reserved.</p>
