--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     />
     <link rel="stylesheet" href="./css/site.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <header class="page-header">
