--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jordi Vilaplana &ndash; Contact</title>
+    <title>Contact &ndash; Jordi Vilaplana</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -70,14 +70,17 @@
               <li class="contact-item">
                 <a href="tel:(+34)660821516" target="_blank" title="Twitter/X" class="contact-link">
                   <ion-icon class="contact-icon" name="call-outline"></ion-icon>
-                  <span class="contact-text">(+34) 660 82 15 16</span>
+                  <span class="contact-text">(+34) 660 82 15 16 *</span>
                 </a>
               </li>
             </ul>
           </nav>
-          <div class="contact-availability">Available 9 AM/6 PM. Europe/Madrid timezone.</div>
-
-          <h2 class="h-white">Or follow me on my socials</h2>
+          <div class="contact-availability">* Available 9 AM/6 PM. Europe/Madrid timezone.</div>
+        </div>
+      </section>
+      <section class="section section-socials">
+        <div class="container">
+          <h2>Or follow me on my socials</h2>
           <nav class="contact-nav">
             <ul class="contact-list">
               <li class="contact-item">
