Education & Experience front sections

--- a/education.html
+++ b/education.html
@@ -38,7 +38,23 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="section section-front">
+        <div class="container grid g--3-cols">
+          <div class="front-presentation">
+            <h1 class="front-title">
+              <span class="f-title-block t--green-dark">Jordi</span>
+              <br />
+              <span class="f-title-block t--white b--green-dark">Vilaplana Mart&iacute;</span>
+              <br /><br />
+              <span class="f-title-block t--white b--purple-dark t--block-end">Education</span>
+            </h1>
+          </div>
+
+          <div class="front-img-box"></div>
+        </div>
+      </section>
+    </main>
 
     <footer class="section page-footer">
       <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;.<br />All rights reserved.</p>
